Fix & should be encoded as &amp; and cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
@@ -37,8 +36,6 @@
     js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.7&appId=1152672198092601";
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
-
-  <!--data-spy="scroll" data-target="#navbar-example"-->
 
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -82,7 +79,7 @@
           <section>
             <div class="main-wrap">
               <div class="text-wrap col-sm-8 animated bounceInLeft">
-                <h1>Test Your Front-End Dev’s <br> Skills & Experience</h1>
+                <h1>Test Your Front-End Dev’s <br> Skills &amp; Experience</h1>
                 <h2>Hiring a Front-End Developer? Get to know his capabilities <br> with a simple Testio task.</h2>
                 <div class="main-action-wrap">
                   <a class="btn btn-default t-green-button action-check-pricing" href="#pricing" role="button">Check pricing</a>
@@ -110,7 +107,6 @@
 
     <!--features-->
     <div class="container-fluid t-features" id="features">
-
       <div class="container">
         <section>
           <div class="row">
@@ -234,7 +230,6 @@
           </div>
         </div>
       </div>
-
     </footer>
     <!--END footer-->
 
@@ -251,7 +246,6 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
